--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
 
-    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,14 +19,12 @@
       rel="stylesheet"
     />
 
-    <!-- Normalize.css -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     />
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="./src/css/main.css" />
+    <link rel="stylesheet" href="./src/css/styles.css" />
   </head>
   <body>
     <header class="header">
@@ -37,39 +34,46 @@
             ><span class="accent">Web</span>Studio</a
           >
 
-          <div class="header-nav-wrapper">
-            <ul class="header-nav">
-              <li>
-                <a class="header-nav-link active" href="./index.html">Studio</a>
-              </li>
-              <li>
-                <a class="header-nav-link" href="./portfolio.html">Portfolio</a>
-              </li>
-              <li>
-                <a class="header-nav-link" href="./contact.html">Contact</a>
-              </li>
-            </ul>
+          <button class="burger-btn" type="button">
+            <svg width="32" height="22">
+              <use href="./src/img/sprite.svg#icon-burger"></use>
+            </svg>
+          </button>
 
-            <ul>
-              <li>
-                <a class="header-contact" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="header-contact" href="tel:+11000111111"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </div>
+          <ul class="header-nav">
+            <li>
+              <a class="header-nav-link active" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="header-nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="header-nav-link" href="./contact.html">Contact</a>
+            </li>
+          </ul>
         </nav>
+
+        <address>
+          <ul class="header-contact-list">
+            <li>
+              <a class="header-contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-contact" href="tel:+11000111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
+
     <main>
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <h1 class="hero-title">Effective solutions for your business</h1>
           <button type="button" class="hero-button">Order Service</button>
         </div>
       </section>
@@ -79,7 +83,7 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
-              <div>
+              <div class="advantages-icon-wrapper">
                 <svg>
                   <use href="./src/img/sprite.svg#icon-antenna"></use>
                 </svg>
@@ -91,7 +95,7 @@
               </p>
             </li>
             <li class="advantages-item">
-              <div>
+              <div class="advantages-icon-wrapper">
                 <svg>
                   <use href="./src/img/sprite.svg#icon-clock"></use>
                 </svg>
@@ -103,7 +107,7 @@
               </p>
             </li>
             <li class="advantages-item">
-              <div>
+              <div class="advantages-icon-wrapper">
                 <svg>
                   <use href="./src/img/sprite.svg#icon-diagram"></use>
                 </svg>
@@ -115,7 +119,7 @@
               </p>
             </li>
             <li class="advantages-item">
-              <div>
+              <div class="advantages-icon-wrapper">
                 <svg>
                   <use href="./src/img/sprite.svg#icon-astronaut"></use>
                 </svg>
@@ -136,13 +140,25 @@
 
           <ul class="product-list">
             <li class="product-item">
-              <img src="./src/img/products/computer.jpg" alt="product1" />
+              <img
+                srcset="./src/img/products/computer@2x.jpg 2x"
+                src="./src/img/products/computer.jpg"
+                alt="product1"
+              />
             </li>
             <li class="product-item">
-              <img src="./src/img/products/app.jpg" alt="product2" />
+              <img
+                srcset="./src/img/products/app@2x.jpg 2x"
+                src="./src/img/products/app.jpg"
+                alt="product2"
+              />
             </li>
             <li class="product-item">
-              <img src="./src/img/products/app2.jpg" alt="product3" />
+              <img
+                srcset="./src/img/products/app2@2x.jpg 2x"
+                src="./src/img/products/app2.jpg"
+                alt="product3"
+              />
             </li>
           </ul>
         </div>
@@ -154,7 +170,11 @@
 
           <ul class="team-list">
             <li class="team-member">
-              <img src="./src/img/team/mark_guerrero.jpg" alt="Mark Guerrero" />
+              <img
+                srcset="./src/img/team/mark_guerrero@2x.jpg 2x"
+                src="./src/img/team/mark_guerrero.jpg"
+                alt="Mark Guerrero"
+              />
               <div class="team-member-info">
                 <h2 class="team-member-name">Mark Guerrero</h2>
                 <p class="team-member-role">Product Designer</p>
@@ -208,7 +228,11 @@
               </div>
             </li>
             <li class="team-member">
-              <img src="./src/img/team/tom_ford.jpg" alt="Tom Ford" />
+              <img
+                srcset="./src/img/team/tom_ford@2x.jpg 2x"
+                src="./src/img/team/tom_ford.jpg"
+                alt="Tom Ford"
+              />
               <div class="team-member-info">
                 <h2 class="team-member-name">Tom Ford</h2>
                 <p class="team-member-role">Frontend Developer</p>
@@ -262,7 +286,11 @@
               </div>
             </li>
             <li class="team-member">
-              <img src="./src/img/team/camila_garcia.jpg" alt="Camila Garcia" />
+              <img
+                srcset="./src/img/team/camila_garcia@2x.jpg 2x"
+                src="./src/img/team/camila_garcia.jpg"
+                alt="Camila Garcia"
+              />
               <div class="team-member-info">
                 <h2 class="team-member-name">Camila Garcia</h2>
                 <p class="team-member-role">Marketing</p>
@@ -316,7 +344,11 @@
               </div>
             </li>
             <li class="team-member">
-              <img src="./src/img/team/daniel_wilson.jpg" alt="Daniel Wilson" />
+              <img
+                srcset="./src/img/team/daniel_wilson@2x.jpg 2x"
+                src="./src/img/team/daniel_wilson.jpg"
+                alt="Daniel Wilson"
+              />
               <div class="team-member-info">
                 <h2 class="team-member-name">Daniel Wilson</h2>
                 <p class="team-member-role">UI Designer</p>
@@ -456,73 +488,96 @@
     </main>
 
     <footer>
-      <div class="container footer-wrapper">
-        <div class="footer-left-side">
-          <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
-          <p class="footer-description">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+      <div class="container footer-container">
+        <div class="footer-wrapper">
+          <div class="footer-info-wrapper">
+            <a class="logo" href="#"><span class="accent">Web</span>Studio</a>
+            <p class="footer-description">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+
+          <div class="footer-social">
+            <h2 class="footer-title">Social Media</h2>
+
+            <ul class="footer-social-list">
+              <li>
+                <a
+                  class="footer-social-link"
+                  href="https://www.instagram.com/escbrk/"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg>
+                    <use href="./src/img/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-social-link"
+                  href="./contact.html"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg>
+                    <use href="./src/img/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-social-link"
+                  href="https://www.facebook.com/Escobrk"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg>
+                    <use href="./src/img/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  class="footer-social-link"
+                  href="https://www.linkedin.com/in/paul-yakymenko/"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                >
+                  <svg>
+                    <use href="./src/img/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-social">
-          <h2 class="footer-social-title">Social Media</h2>
-
-          <ul class="footer-social-list">
-            <li>
-              <a
-                class="footer-social-link"
-                href="https://www.instagram.com/escbrk/"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg>
-                  <use href="./src/img/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                class="footer-social-link"
-                href="./contact.html"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg>
-                  <use href="./src/img/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                class="footer-social-link"
-                href="https://www.facebook.com/Escobrk"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg>
-                  <use href="./src/img/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                class="footer-social-link"
-                href="https://www.linkedin.com/in/paul-yakymenko/"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                <svg>
-                  <use href="./src/img/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
+        
+      <div class="form-wrapper">
+          <label class="footer-title" for="email">Subscribe</label>
+  
+          <form class="footer-form">
+            <input
+              class="footer-input"
+              type="email"
+              id="email"
+              placeholder="E-mail"
+            />
+  
+            <button class="footer-form-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-btn-icon" width="24" height="24">
+                <use href="./src/img/sprite.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+      </div>
       </div>
     </footer>
 
-    <div class="backdrop">
+    <!-- <div class="backdrop">
       <div class="backdrop-content">
         <button type="button" class="close-modal-btn">
           <svg class="close-modal-icon">
@@ -617,8 +672,15 @@
           <button type="submit" class="form-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
 
+    <div class="mobile-menu">
+      <!-- <button class="mobile-close-btn" type="button">
+        <svg width="32" height="22">
+          <use href="./src/img/sprite.svg#"></use>
+        </svg>
+      </button> -->
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
